--- a/docs/src/content/docs/en/layers.mdx
+++ b/docs/src/content/docs/en/layers.mdx
@@ -14,19 +14,14 @@ import ref from '../../../reference/latest.ts'
 import AppropriateImage from "../../../components/style-spec/appropriate-image.jsx";
 import Caption from "../../../components/style-spec/caption.jsx";
 import Items from '../../../components/style-spec/specs/items.jsx'
+import Layers1Prism from '../highligting/layer1.tsx'
 
 
 {/* A style's `layers` property lists all the layers available in that style. The type of layer is specified by the `"type"` property, and must be one of layerTypes.map((t, i) => <var key={i}>{t}</var>).reduce((prev, curr) => [prev, ', ', curr]). */}
 
 Except for layers of the <var>background</var> type, each layer needs to refer to a source. Layers take the data that they get from a source, optionally filter features, and then define how those features are styled.
 
-```json
-"layers": JSON.stringify(
-    ref.$root.layers.example,
-    null,
-    2
-    )
-```
+<Layers1Prism />
 
 
 {/* START GENERATED CONTENT:
