--- a/docs/src/content/docs/en/root.mdx
+++ b/docs/src/content/docs/en/root.mdx
@@ -11,7 +11,7 @@ products:
 ---
 import Items from '../../../components/style-spec/specs/items.jsx'
 import ref from '../../../reference/latest.ts'
-import RootPrism from '../highligting/root1.jsx'
+import RootPrism from '../highligting/root1.tsx'
 
 
 Root level properties of a MapLibre style specify the map's layers, tile sources and other resources, and default values for the initial camera position when not specified elsewhere.
