--- a/docs/src/content/docs/en/sprite.mdx
+++ b/docs/src/content/docs/en/sprite.mdx
@@ -10,16 +10,14 @@ products:
 prependJs:
     - "import ref from '@maplibre/maplibre-gl-style-spec/tsc/src/reference/latest';"
 ---
+import Sprint1Prism from '../highligting/sprite1.tsx'
+
+
 
 A style's `sprite` property supplies a URL template for loading small images to use in rendering `background-pattern`, `fill-pattern`, `line-pattern`,`fill-extrusion-pattern` and `icon-image` style properties.
 
-```json
-"sprite": {{JSON.stringify(
-    ref.$root.sprite.example,
-    null,
-    2
-)}}
-```
+<Sprint1Prism />
+
 
 A valid sprite source must supply two types of files:
 
@@ -41,7 +39,6 @@ A valid sprite source must supply two types of files:
 - _Image files_, which are PNG images containing the sprite data.
 
 Apart from the required `width`, `height`, `x`, and `y` properties, the following optional properties are supported:
-<!-- copyeditor ignore retext-passive -->
 - `content`: An array of four numbers, with the first two specifying the left, top corner, and the last two specifying the right, bottom corner. If present, and if the icon uses [`icon-text-fit`](/maplibre-gl-js-docs/style-spec/layers/#layout-symbol-icon-text-fit), the symbol's text will be fit inside the content box.
 - `stretchX`: An array of two-element arrays, consisting of two numbers that represent the _from_ position and the _to_ position of areas that can be stretched.
 - `stretchY`: Same as `stretchX`, but for the vertical dimension.
